<resources>
    <string name="app_name">BiblioSearch</string>
    <string name="title_activity_register_screen">Pantalla de registro</string>
    <!-- Strings used for fragments for navigation -->

    <string name="next">Siguiente</string>
    <string name="previous">Anterior</string>
    <string name="email">Correo electrónico</string>
    <string name="register">Registrarse</string>
    <string name="login">Iniciar sesion</string>
    <string name="logo_bibliosearch">Logo Bibliosearch</string>
    <string name="password">Contraseña</string>
    <string name="confirm_password">Confirmar contraseña</string>
    <string name="last_name">Apellidos</string>
    <string name="user_name">Usuario</string>
    <string name="first_name">Nombres</string>

    <string name="create_password">Contraseña</string>
    <string name="university">Universidad</string>
    <string name="welcome_to_bibliosearch">Bienvenido a Bibliosearch</string>
    <string name="title_activity_home_screen">Inicio</string>
    <string name="open">Abrir</string>
    <string name="close">Cerrar</string>
    <string name="books">Libros</string>
    <string name="users">Usuarios</string>
    <string name="lorem_ipsum">consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum, written by Cicero in 45 BC Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur? 1914 translation by H. Rackham But I must explain to you how all this mistaken idea of denouncing pleasure and praising pain was born and I will give you a complete account of the system, and expound the actual teachings of the great explorer of the truth, the master-builder of human happiness. No one rejects, dislikes, or avoids pleasure itself, because it is pleasure, but because those who do not know how to pursue pleasure rationally encounter consequences that are extremely painful. Nor again is there anyone who loves or pursues or desires to obtain pain of itself, because it is pain, but because occasionally circumstances occur in which toil and pain can procure him some great pleasure. To take a trivial example, which of us ever undertakes laborious physical exercise, except to obtain some advantage from it? But who has any right to find fault with a man who chooses to enjoy a pleasure that has no annoying consequences, or one who avoids a pain that produces no resultant pleasure?</string>
    <string name="log_out">Cerrar sesion</string>
    <string name="new_book">Creación de libros</string>
    <string name="history">Historial</string>
    <string name="reserve">Reservar</string>
    <string name="search">Buscar</string>
    <string name="delete_user">Eliminar Usuario</string>
    <string name="new_user_admin">Nuevo usuario</string>
    <string name="home_menu">Menú inicio</string>
    <string name="example">example</string>
    <string name="activar_usuario">Activar usuario</string>
    <string name="texto_de_ejemplo">Texto de ejemplo</string>
    <string name="desactivar_usuario">Desactivar Usuario</string>
    <string name="documento">Documento de identidad</string>
    <string name="ejemplo">Ejemplo</string>
    <string name="delete_book">Eliminar</string>
    <string name="return_book">Devolver</string>
    <string name="usuario_bloqueado">Usuario bloqueado</string>
    <string name="libros_en_prestamo">Libros que tienes en prestamo</string>
    <string name="titulo_del_libro">Titulo del libro</string>
    <string name="autor">Autor</string>
    <string name="descripci_n_o_sin_psis">Descripción o sinópsis</string>
    <string name="cantidad">Cantidad</string>
    <string name="a_o_de_publicaci_n">Año de publicación</string>
    <string name="calificaci_n">Calificación</string>
    <string name="guardar_libro">Guardar libro</string>
    <string name="nuevo_libro">Nuevo libro</string>
    <string name="crear_como_administrador">¿ Crear como administrador ?</string>
</resources>