<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <group android:id="@+id/side_menu_group">
        <item
            android:id="@+id/home_menu_item"
            android:icon="@drawable/ic_home"
            android:title="@string/home_menu"
            app:showAsAction="never" />

        <item
            android:id="@+id/books_menu_item"
            android:icon="@drawable/ic_books"
            android:title="@string/books"
            app:showAsAction="never" />

    </group>
    <group android:id="@+id/admin_side_menu_group">
        <item
            android:id="@+id/users_menu_item"
            android:icon="@drawable/ic_users"
            android:title="@string/users"
            app:showAsAction="never" />
    </group>
    <item
        android:id="@+id/logoutToolbarItem_menu"
        android:icon="@drawable/ic_log_out"
        android:title="@string/log_out"
        app:showAsAction="collapseActionView" />

</menu>