<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/detail_book"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="?attr/actionBarSize">

    <ImageView
        android:id="@+id/detail_book_cover"
        android:layout_width="108dp"
        android:layout_height="190dp"
        android:layout_gravity="center"
        android:padding="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:gravity="center"
        tools:srcCompat="@drawable/ic_book_2" />

    <TextView
        android:id="@+id/detail_book_name"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"

        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text=""
        app:layout_constraintStart_toEndOf="@+id/detail_book_cover"
        app:layout_constraintTop_toTopOf="@+id/detail_book_cover" />

    <TextView
        android:id="@+id/detail_book_author"
        android:layout_width="200dp"
        android:layout_height="wrap_content"

        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text=""
        app:layout_constraintStart_toEndOf="@+id/detail_book_cover"
        app:layout_constraintTop_toBottomOf="@+id/detail_book_name" />

    <TextView
        android:id="@+id/detail_book_release"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"

        android:layout_marginTop="10dp"
        android:text=""
        android:gravity="center"
        app:layout_constraintStart_toEndOf="@+id/detail_book_cover"
        app:layout_constraintTop_toBottomOf="@+id/detail_book_author" />

    <TextView
        android:id="@+id/detail_book_id"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"

        android:layout_marginTop="10dp"
        android:text=""
        app:layout_constraintStart_toEndOf="@+id/detail_book_cover"
        app:layout_constraintTop_toBottomOf="@+id/detail_book_release" />


    <RatingBar
        android:id="@+id/detail_book_ratingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:clickable="false"
        android:foregroundGravity="top"
        android:gravity="center"
        android:scaleX="0.5"
        android:scaleY="0.5"
        app:layout_constraintStart_toStartOf="@+id/detail_book_id"
        app:layout_constraintTop_toBottomOf="@+id/detail_book_id" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintTop_toBottomOf="@+id/detail_book_cover"
        app:layout_constraintVertical_bias="0.016"
        tools:layout_editor_absoluteX="0dp">


        <TextView
            android:id="@+id/detail_book_description"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="60dp"
            android:gravity="center"
            android:text="@string/lorem_ipsum"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
    </ScrollView>

    <LinearLayout
        android:id="@+id/bottom_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/reservar_libro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="80dp"
            android:paddingLeft="20dp"

            android:paddingRight="20dp"
            android:text="@string/reserve" />

        <Button
            android:id="@+id/historial_libro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="20dp"
            android:paddingLeft="20dp"

            android:paddingRight="20dp"
            android:text="@string/history" />
    </LinearLayout>

</LinearLayout>